# llm

./: .gitignore  main.py  playground.py  pyproject.toml  rope.py  test_mlx.py
scripts/: download_dataset.py  eval_tokenizer.py  pretrain.py  train_tokenizer.py
src/llm/: tokenizer.py  trainer.py
src/llm_py/: gpt.py  trainer.py
tests/: test_tokenizer.py
