[project]
name = "llm-py"
version = "0.1.0"
description = "Catching up with current LLM research, one epoch at a time"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mlx>=0.30.5",
    "numpy>=2.4.1",
    "polars>=1.37.1",
    "regex>=2026.1.15",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "torch>=2.10.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.basedpyright]
include = ["src", "scripts"]
exclude = [
	"**/__pycache__",
]
typeCheckingMode = "recommended"
reportUnknownArgumentType = false
reportExplicitAny = false
reportUnusedCallResult = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
